--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -45,8 +45,8 @@ header {
 .chat-container {
     display: flex;
     flex-direction: column-reverse;
-    align-items: flex-end;
-    justify-content: end;
+    align-items:baseline;
+    /* justify-content: end; */
     position: absolute;
     overflow-y: auto;
     bottom: 5%;
@@ -55,14 +55,36 @@ header {
     background-color: rgb(27, 27, 27);
 }
 
-.chat-container--message {
+.chat-container--message--recieved{
     position: relative;
     display: flex;
     justify-content: left;
     align-items: center;
+    width: auto;
+    margin-left: 1%;
     margin-top: 5px;
     margin-bottom: 5px;
-    margin-right: 5px;
+    padding: 10px;
+    background: linear-gradient(to bottom right, #00dffd98, #1100ff97);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    max-width: 95%;
+    min-height: 5%;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.2rem;
+}
+
+.chat-container--message{
+    position: relative;
+    display: flex;
+    align-items: center;
+    transform: translate(-100%, 0);
+    left: 98%;
+    width: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
     padding: 10px;
     background: linear-gradient(to bottom right, #ff2cdf90, #0015ffa3);
     border-top-left-radius: 10px;
