--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -60,7 +60,6 @@ header {
     display: flex;
     justify-content: left;
     align-items: center;
-    width: auto;
     margin-left: 1%;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -70,7 +69,7 @@ header {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     max-width: 95%;
-    min-height: 5%;
+    min-height: auto;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.2rem;
@@ -82,7 +81,6 @@ header {
     align-items: center;
     transform: translate(-100%, 0);
     left: 98%;
-    width: auto;
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 10px;
@@ -91,7 +89,7 @@ header {
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     max-width: 95%;
-    min-height: 5%;
+    min-height: auto;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.2rem;
