--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 body{
     background-color:  rgb(27, 27, 27);
 }
-header {
+.chat-header-container {
     position: fixed;
     top: 0;
     left: 0;
@@ -11,6 +11,13 @@ header {
     width: 100%;
     height: 7%;
     background-color: rgb(15, 15, 15);
+}
+
+.chat-header--back{
+    width: 10px;
+    height: 10px;
+    background-color: darkturquoise;
+    margin-left: 15px;
 }
 
 .photo-username {
@@ -29,17 +36,6 @@ header {
     font-weight: 400;
     font-size: 1.2rem;
     margin-left: 10px;
-}
-
-.header-button--logout {
-    position: absolute;
-    right: 10px;
-    border: none;
-    border-radius: 25px;
-    width: 16%;
-    height: 30px;
-    background-color: #0015ffa3;
-    color: white;
 }
 
 .chat-container {
