--- a/src/pages/Chats/Chats.css
+++ b/src/pages/Chats/Chats.css
@@ -6,7 +6,8 @@
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    height: 12%;
+    height: 15%;
+    padding: 8px;
     background-color: rgb(15, 15, 15);
     margin-bottom: 5px;
 }
@@ -25,31 +26,20 @@
 .chat-header--container--options{
     display: flex;
     flex-direction: row;
-    justify-content:space-evenly;
+    justify-content:space-between;
+    align-items: center;
     width: 100%;
-}
-
-.header-search--chats{
-    border: none;
-    border-radius: 25px;
-    width: 80%;
-    height: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: rgb(90, 90, 90);
-    color: white;
-    margin-bottom: 10px;
 }
 
 .header-button--logout {
     position: relative;
+    right: 10px;
     border: none;
     border-radius: 25px;
-    width: 16%;
+    width: 20%;
     height: 30px;
     background-color: #0015ffa3;
     color: white;
-    margin-bottom: 10px;
 }
 
 .chats-container{
