Notification for phone UI and creation of desktop UI

--- a/src/Desktop/components/chats/ChatsList/ChatsList.css
+++ b/src/Desktop/components/chats/ChatsList/ChatsList.css
@@ -12,6 +12,7 @@
     cursor: pointer;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1rem;
+    color: white;
 }
 
 .chat-info--photo--chatList{
