--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -12,6 +12,22 @@ h1{
     color: rgb(14, 14, 72);
 }
 
+.form-login--error{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    width: 300px;
+    height: 200px;
+    border-radius: 20px;
+    border: rgb(220, 144, 144) 1px solid;
+}
+
 .form-login{
     position: absolute;
     top: 50%;
@@ -43,6 +59,14 @@ h1{
     height: 25px;
     text-align: center;
     margin-bottom: 5px;
+}
+
+.form-login--error--message{
+    margin-bottom: 2px;
+    position: relative;
+    color: red;
+    font-size: 1rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .form-login--button{
