--- a/src/App/pages/Chat/Chat.css
+++ b/src/App/pages/Chat/Chat.css
@@ -101,6 +101,15 @@ body{
     font-size: 1.5rem;
 }
 
+.sent{
+    position: relative;
+    color: gray;
+    font-size: 10px;
+    margin: 0 0 0 10px;
+    bottom: -7px;
+
+}
+
 .type-message {
     position: fixed;
     display: flex;
